SERVER-55658 Out-of-order destruction of AutoGet* objects can lead to transaction closure