src/mongo/db/query/plan_executor_sbe.h
@@ -117,8 +117,13 @@ public:
     Timestamp getLatestOplogTimestamp() const override;
     BSONObj getPostBatchResumeToken() const override;
 
+    /**
+     * Even though the leaves of '_root' will acquire AutoGet objects, the caller must acquire a top
+     * level AutoGet object outside of this PlanExecutor in order to open a storage transaction and
+     * establish a consistent view of the catalog.
+     */
     LockPolicy lockPolicy() const override {
-        return LockPolicy::kLocksInternally;
+        return LockPolicy::kLockExternally;
     }
 
     const PlanExplainer& getPlanExplainer() const final {
